test: init add isSPA

--- a/test.html
+++ b/test.html
@@ -41,6 +41,7 @@
         endpoint: "http://localhost:8080/collect",
         appId: "test-app",
         debug: true,
+        isSPA: false,
       });
 
       // 测试自定义事件
